# matmul

./: README.md  a.patch
C/aocl/: CMakeLists.txt
C/aocl/src/: blas.c
C/blockmpi/: CMakeLists.txt
C/blockmpi/src/: mpi.c
C/cuda/: CMakeLists.txt
C/cuda/src/: cuda.cu
C/mkl/: CMakeLists.txt
C/mkl/src/: main.c  mkl.c
C/mpi/: CMakeLists.txt
C/mpi/src/: mpi.c
C/openblas/: CMakeLists.txt
C/openblas-mpi/: CMakeLists.txt
C/openblas-mpi/src/: mpi.c
C/openblasmpi/: CMakeLists.txt
C/opencl/: CMakeLists.txt
C/opencl/src/: clblast.c
C/openmp/: CMakeLists.txt
C/openmp/src/: openmp.c
C/rocm/: CMakeLists.txt
C/rocm/src/: blas.c
fortran/fblockmpi/src/: mpi.f90
fortran/fmatmulmpi/: CMakeLists.txt
fortran/fmatmulmpi/src/: mpi.f90
fortran/fmpi/src/: main.f90  mpi.f90
fortran/fomp/: CMakeLists.txt
fortran/matmul/: CMakeLists.txt
fortran/matmul-fortran/: CMakeLists.txt
fortran/matmul-fortran/src/: matmul.f90
fortran/matmul-mpi-fortran/src/: mpi2c.f90
fortran/matmul-mpi-fortran/src/fail/: mpi.f90
fortran/mpi-fortran/: CMakeLists.txt
fortran/mpi-fortran/src/: main.c  mpi2c.f90
fortran/openmp-fortran/: CMakeLists.txt
fortran/openmp-fortran/src/: main.f90  omp.f90
fortran2c/f2cblockmpi/src/: main.c  mpi2c.f90
fortran2c/f2cblockmpi/src/fail/: mpi.f90
fortran2c/f2cmpi/: CMakeLists.txt
fortran2c/f2cmpi/src/fail/: main.f90  mpi.f90
rust/mathru/: Cargo.toml
rust/mathru-rs/: Cargo.toml
rust/mathru-rs/src/: main.rs  matmul.rs
rust/mathru/src/: matmul.rs
rust/ndarray/: Cargo.toml
rust/ndarray-rs/: Cargo.toml
rust/ndarray-rs/src/: main.rs  matmul.rs
rust/rayon/: Cargo.toml
rust/rayon-rs/: Cargo.toml
rust/rayon/src/: main.rs  matmul.rs
rust/rayon_block/: Cargo.toml
rust/rayon_block/src/: main.rs  matmul.rs
rust/rayon_ndarray/: .gitignore  Cargo.toml
rust/rayon_ndarray/src/: main.rs  matmul.rs
